@@ -105,7 +105,8 @@ foreach my $var ( qw(
    default_gmaps_search_zoom force_wgs84 google_analytics_key
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
-   spam_detector_module static_path static_url send_moderation_notifications
+   spam_detector_module host_checker_module static_path static_url
+   send_moderation_notifications
   ) ) {
     my $q_method = $var . "__qu";
     my $qu  = $existing_config->$q_method;
@@ -332,6 +333,7 @@ $build->config_data( __templates     => [
                       "admin_revert_user.tt",
                       "backlink_results.tt",
                       "banner.tt",
+                      "blacklisted_host.tt",
                       "delete_confirm.tt",
                       "delete_done.tt",
                       "delete_password_wrong.tt",
